--- a/style.css
+++ b/style.css
@@ -2,17 +2,26 @@ html, body {
     overflow-x: hidden;
 }
 
-/*#background{*/
-/*    background-image: url("resources/gif/background.png");*/
-/*    background-size: cover;*/
-/*    height: 700px;*/
-/*    width: 1536px;*/
-/*    position: absolute;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    bottom: 0;*/
-/*}*/
+#score {
+
+    position: absolute;
+    top: 10px;
+    left: 1400px;
+    width:100px;
+    height: 100px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem; /* Large text size */
+
+    font-weight: bold;
+    background-color: #282c34; /* Dark background for contrast */
+    color: #fff; /* White text */
+    border: 2px solid #61dafb;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 
 #health-bar-container {
     width: 300px;
@@ -43,14 +52,6 @@ html, body {
     bottom: 0;
     left: 10px;
     right: 10px;
-/*1536*/
 
 }
 
-/*#gangsterCanvas{*/
-/*    border: 5px solid #000;*/
-/*    position: absolute;*/
-/*    width: 256px;*/
-/*    height: 256px;*/
-
-/*}*/
