--- a/css/styleStartScreen.css
+++ b/css/styleStartScreen.css
@@ -1,14 +1,29 @@
 
+body{
+    background-image: url("../resources/backgrounds/bg2.png");
+    background-size: cover;
+}
+#main-menu {
+    position: absolute;
+    top: 0;
+    left:110px;
+
+    width:80vw;
+    text-align: center;
+}
+
 #game-header{
+    /*position: absolute;*/
     font-family: 'Press Start 2P', cursive;
     font-size: 5rem;
+    -webkit-text-stroke: 2px white;
 }
 
 
-#start-button,#setting-button {
+#start-button,#setting-button,#select-char-button {
     display: inline-block;
 
-    width: 250px;
+    width: 400px;
     margin: 30px 0 0;
     padding: 15px 30px; /* Padding for size */
     border: 3px solid #005500; /* Darker green border */
@@ -21,18 +36,25 @@
     font-size: 1.5rem; /* Large text size */
 
     text-align: center;
-    text-shadow: 2px 2px 0px #003300; /* Retro shadow effect */
+    text-shadow: 2px 2px 0 #003300; /* Retro shadow effect */
     cursor: pointer;
     transition: all 0.2s ease-in-out; /* Smooth hover effect */
 }
 
-#start-button:hover,#setting-button:hover  {
+#start-button:hover,#setting-button:hover,#select-char-button:hover  {
     background-color: #00aa00; /* Lighter green on hover */
     border-color: #007700; /* Slight border change */
-    transform: scale(1.1); /* Slight zoom effect */
+    transform: scale(1.5); /* Slight zoom effect */
 }
 
-#start-button:active,#setting-button:active  {
+#start-button:active,#setting-button:active,#select-char-button:active  {
     background-color: #005500; /* Darker green when pressed */
     transform: scale(0.95); /* Slight shrink effect */
+}
+
+
+#character-panel {
+
+    width:260px;
+    height:260px;
 }
