--- a/css/styleGame.css
+++ b/css/styleGame.css
@@ -5,10 +5,11 @@ html, body {
 #score-board {
 
     position: absolute;
-    top: 10px;
+    top: 90px;
     left: 1400px;
     width:100px;
     height: 100px;
+
 
     display: flex;
     justify-content: center;
@@ -23,6 +24,44 @@ html, body {
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
+
+#back {
+    display: inline-block;
+
+    position: absolute;
+    top: 10px;
+    left: 1370px;
+
+    padding: 15px 30px; /* Padding for size */
+    border: 3px solid #005500; /* Darker green border */
+    border-radius: 5px; /* Slightly rounded corners */
+
+
+    background-color: #007700; /* Retro green */
+    color: #fff; /* White text */
+    font-family: 'Press Start 2P', cursive; /* Retro pixel font */
+    font-size: 1.5rem; /* Large text size */
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 2px 2px 0 #003300; /* Retro shadow effect */
+    cursor: pointer;
+    transition: all 0.2s ease-in-out; /* Smooth hover effect */
+}
+
+#back:hover  {
+    background-color: #00aa00; /* Lighter green on hover */
+    border-color: #007700; /* Slight border change */
+    transform: scale(1.2); /* Slight zoom effect */
+}
+
+#back:active {
+    background-color: #005500; /* Darker green when pressed */
+    transform: scale(0.95); /* Slight shrink effect */
+}
+
+
+
 
 #health-bar-container {
     width: 300px;
